Fixed color fill sliders, and removed the excess overload of the base style.

--- a/Yume.Controls/Yume.Controls/Yume.Controls.csproj
+++ b/Yume.Controls/Yume.Controls/Yume.Controls.csproj
@@ -96,6 +96,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Themes\Controls\ProgressBars.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\Controls\Sliders.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -106,7 +110,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Fonts\OpenSans\LICENSE.txt" />
+    <EmbeddedResource Include="Fonts\OpenSans\LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
