--- a/src/Yume.Controls/Yume.Controls/Yume.Controls.csproj
+++ b/src/Yume.Controls/Yume.Controls/Yume.Controls.csproj
@@ -103,6 +103,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Themes\Controls\ContextMenu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\Controls\Expanders.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
